--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <h1>Week 5 Lab: JavaScript Variables and Operators</h1>
         <div id="results"></div>
         <button onclick="window.location.reload()" class="btn btn-outline-primary mt-4">Reload Web Page</button>
-        <script src="~/app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
